src/objects/IOTEvent__x.object
<CustomObject>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$iot_events</externalName>
    <fields>
        <fullName>d_created_date__c</fullName>
        <externalDeveloperName>d_created_date</externalDeveloperName>
        <label>Created date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>event_payload__c</fullName>
        <externalDeveloperName>event_payload</externalDeveloperName>
        <label>Event payload</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>event_type__c</fullName>
        <externalDeveloperName>event_type</externalDeveloperName>
        <label>Event type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>retention_policy__c</fullName>
        <externalDeveloperName>retention_policy</externalDeveloperName>
        <label>Retention policy</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ucp_guest_id__c</fullName>
        <externalDeveloperName>ucp_guest_id</externalDeveloperName>
        <label>Ucp guest id</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <label>IOTEvent</label>
    <pluralLabel>IOTEvent</pluralLabel>
</CustomObject>